--- a/manager/app/src/main/res/values-zh-rCN/strings.xml
+++ b/manager/app/src/main/res/values-zh-rCN/strings.xml
@@ -6,6 +6,8 @@
     <string name="home_working">工作中</string>
     <string name="home_working_version">版本: %d</string>
     <string name="home_superuser_count">超级用户数：%d</string>
+    <string name="home_failure">未检测到KSU支持</string>
+    <string name="home_failure_reason">请检查是否已刷入了支持Non-GKI的内核</string>
     <string name="home_unsupported">不支持</string>
     <string name="home_unsupported_reason">KernelSU 现在只支持 GKI 内核</string>
     <string name="home_kernel">内核版本</string>
@@ -131,4 +133,7 @@
     <string name="selected_lkm">选择的 LKM ：%s</string>
     <string name="save_log">保存日志</string>
     <string name="log_saved">日志已保存</string>
+    <string name="home_unofficial_kernelsu">☃️ 非官方版本</string>
+    <string name="home_unofficial_kernelsu_announce">https://github.com/tiann/KernelSU/issues/1705</string>
+    <string name="home_unofficial_kernelsu_body">Non-GKI内核已经停止支持，点击详情查看</string>
 </resources>
